feat(project): add backup-error project page

--- a/stages.html
+++ b/stages.html
@@ -204,6 +204,7 @@
             <a href="stages.html" class="active" aria-haspopup="true" aria-expanded="false">Missions de Stage</a>
             <ul class="submenu-list">
               <li><a href="stages.html#mission-https-apache">Passage HTTPS Apache</a></li>
+              <li><a href="project/backup-error.html">Sauvegarde Veeam – relance en échec</a></li>
               </ul>
           </li>
         </ul>
@@ -216,6 +217,22 @@
       <h1>Missions de Stage</h1>
       <p>Présentation détaillée des missions techniques réalisées durant mes stages, axées sur la configuration serveur, la sécurisation et l'infrastructure réseau.</p>
     </header>
+<section class="mission-cards">
+  <div class="card-grid">
+    <div class="card">
+      <img src="img/22 mai 2025, 13_51_32.png" alt="Illustration passage HTTPS">
+      <h3>Passage HTTPS Apache</h3>
+      <p>Sécurisation de l'accès via un reverse proxy.</p>
+      <a href="#mission-https-apache" class="btn-primary">Voir le projet</a>
+    </div>
+    <div class="card">
+      <img src="img/backup-error/cover.png" alt="Sauvegarde Veeam en erreur">
+      <h3>Sauvegarde Veeam – relance en échec</h3>
+      <p>Diagnostic et relance d'une sauvegarde échouée.</p>
+      <a href="project/backup-error.html" class="btn-primary">Voir le projet</a>
+    </div>
+  </div>
+</section>
 
     <article id="mission-https-apache" class="mission-stage">
       <h2>Passage en HTTPS avec Apache en redirection</h2>
