--- a/veille-tech.html
+++ b/veille-tech.html
@@ -52,6 +52,7 @@
             <a href="stages.html" aria-haspopup="true" aria-expanded="false">Missions de Stage</a>
             <ul class="submenu-list">
               <li><a href="stages.html#mission-https-apache">Passage HTTPS Apache</a></li>
+              <li><a href="project/backup-error.html">Sauvegarde Veeam – relance en échec</a></li>
               </ul>
           </li>
         </ul>
