feat: add veeam backup error mission page + nav link

--- a/stages.html
+++ b/stages.html
@@ -204,7 +204,7 @@
             <a href="stages.html" class="active" aria-haspopup="true" aria-expanded="false">Missions de Stage</a>
             <ul class="submenu-list">
               <li><a href="stages.html#mission-https-apache">Passage HTTPS Apache</a></li>
-              <li><a href="project/backup-error.html">Sauvegarde Veeam – relance en échec</a></li>
+              <li><a href="missions-veeam-backup.html">Sauvegarde Veeam – relance en échec</a></li>
               </ul>
           </li>
         </ul>
@@ -229,7 +229,7 @@
       <img src="img/backup-error/cover.png" alt="Sauvegarde Veeam en erreur">
       <h3>Sauvegarde Veeam – relance en échec</h3>
       <p>Diagnostic et relance d'une sauvegarde échouée.</p>
-      <a href="project/backup-error.html" class="btn-primary">Voir le projet</a>
+      <a href="missions-veeam-backup.html" class="btn-primary">Voir le projet</a>
     </div>
   </div>
 </section>
