fix(profile): replace 'expert' by 'Étudiant BTS SIO SISR'

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio Romain Begot - Expert Infrastructure et Cybersécurité</title>
+  <title>Portfolio Romain Begot - Étudiant en cybersécurité (BTS SIO – option SISR)</title>
   <meta name="description" content="Portfolio de Romain Begot, étudiant BTS SIO SISR spécialisé en cybersécurité, infrastructure réseau et administration système. Découvrez mes compétences et réalisations.">
   <meta name="keywords" content="BTS SIO, SISR, cybersécurité, infrastructure, réseau, portfolio, Romain Begot, administration système">
   <meta name="author" content="Romain Begot">
   
   <!-- Open Graph -->
-  <meta property="og:title" content="Portfolio Romain Begot - Expert Infrastructure et Cybersécurité">
-  <meta property="og:description" content="Découvrez mon expertise en cybersécurité, infrastructure réseau et administration système">
+  <meta property="og:title" content="Portfolio Romain Begot - Étudiant en cybersécurité (BTS SIO – option SISR)">
+  <meta property="og:description" content="Découvrez mon parcours en cybersécurité, infrastructure réseau et administration système">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="fr_FR">
   
@@ -81,7 +81,7 @@
     </section>
 
     <section class="competences-preview">
-      <h2>Domaines d'expertise</h2>
+      <h2>Domaines de compétences</h2>
       <div class="competences-grid">
         <div class="competence-card">
           <div class="competence-icon">🛡️</div>
