--- a/mon-cv.html
+++ b/mon-cv.html
@@ -10,7 +10,7 @@
   
   <!-- Open Graph -->
   <meta property="og:title" content="CV Romain Begot - BTS SIO SISR">
-  <meta property="og:description" content="Consultez le CV de Romain Begot, expert en cybersécurité et infrastructure">
+  <meta property="og:description" content="Consultez le CV de Romain Begot, Étudiant en cybersécurité (BTS SIO – option SISR) spécialisé en infrastructure">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="fr_FR">
   
