--- a/ateliers.html
+++ b/ateliers.html
@@ -77,7 +77,7 @@
         </div>
         <div class="stat-item">
           <span class="stat-number">6</span>
-          <span class="stat-label">Domaines d'expertise</span>
+          <span class="stat-label">Domaines de compétences</span>
         </div>
         <div class="stat-item">
           <span class="stat-number">100+</span>
