--- a/missions-veeam-backup.html
+++ b/missions-veeam-backup.html
@@ -11,7 +11,7 @@
 <body>
   <div id="page-loader">
     <div class="loader-logo">
-      <img src="img/22 mai 2025, 13_51_32.png" alt="Logo Romain Begot - Portfolio Professionnel" class="loader-img">
+      <img src="img/22 mai 2025, 13_51_32.png" alt="Logo Romain Begot - Portfolio Professionnel" class="loader-img" loading="lazy" decoding="async">
       <div class="loader-cyber"></div>
     </div>
     <div class="loader-text">Chargement du Portfolio...</div>
@@ -21,7 +21,7 @@
     <div class="navbar">
       <div class="navbar-left">
         <a href="index.html" class="navbar-logo">
-          <img src="img/22 mai 2025, 13_51_32.png" alt="Logo Romain Begot - Retour à l'accueil">
+          <img src="img/22 mai 2025, 13_51_32.png" alt="Logo Romain Begot - Retour à l'accueil" loading="lazy" decoding="async">
         </a>
         <div class="site-title">Portfolio Romain Begot</div>
       </div>
@@ -67,32 +67,32 @@
         <li>
           <strong>Accès à CyberElements</strong>
           <p>Connexion au portail pour récupérer les identifiants sécurisés.</p>
-          <img src="img/backup-error/step-1.png" alt="Accès CyberElements">
+          <img src="img/backup-error/step-1.png" alt="Accès CyberElements" loading="lazy" decoding="async">
         </li>
         <li>
           <strong>Ouverture de vCenter</strong>
           <p>Vérification de l’état de la machine virtuelle concernée.</p>
-          <img src="img/backup-error/step-2.png" alt="Ouverture de vCenter">
+          <img src="img/backup-error/step-2.png" alt="Ouverture de vCenter" loading="lazy" decoding="async">
         </li>
         <li>
           <strong>Connexion à Veeam Backup &amp; Replication</strong>
           <p>Analyse du job en échec et consultation des logs.</p>
-          <img src="img/backup-error/step-3.png" alt="Console Veeam">
+          <img src="img/backup-error/step-3.png" alt="Console Veeam" loading="lazy" decoding="async">
         </li>
         <li>
           <strong>Diagnostic de la licence</strong>
           <p>Contrôle de la validité de la licence et des ressources disponibles.</p>
-          <img src="img/backup-error/step-4.png" alt="Diagnostic de la licence Veeam">
+          <img src="img/backup-error/step-4.png" alt="Diagnostic de la licence Veeam" loading="lazy" decoding="async">
         </li>
         <li>
           <strong>Purge des instances en échec</strong>
           <p>Nettoyage des tâches bloquées afin de libérer les ressources.</p>
-          <img src="img/backup-error/step-5.png" alt="Purge des instances">
+          <img src="img/backup-error/step-5.png" alt="Purge des instances" loading="lazy" decoding="async">
         </li>
         <li>
           <strong>Relance de la sauvegarde</strong>
           <p>Démarrage manuel du job de sauvegarde pour vérifier son bon déroulement.</p>
-          <img src="img/backup-error/step-6.png" alt="Relance du job Veeam">
+          <img src="img/backup-error/step-6.png" alt="Relance du job Veeam" loading="lazy" decoding="async">
         </li>
       </ol>
     </section>
@@ -100,7 +100,7 @@
     <section class="mission-resultats">
       <h2>Résultats</h2>
       <p>La sauvegarde s’est terminée avec le statut <strong>Success</strong>.</p>
-      <img src="img/backup-error/result.png" alt="Sauvegarde terminée avec succès">
+      <img src="img/backup-error/result.png" alt="Sauvegarde terminée avec succès" loading="lazy" decoding="async">
     </section>
 
     <section class="mission-competences">
