--- a/stages.html
+++ b/stages.html
@@ -173,7 +173,7 @@
 <body>
   <div id="page-loader">
     <div class="loader-logo">
-      <img src="img/22 mai 2025, 13_51_32.png" alt="Logo Romain Begot - Portfolio Professionnel" class="loader-img">
+      <img src="img/22 mai 2025, 13_51_32.png" alt="Logo Romain Begot - Portfolio Professionnel" class="loader-img" loading="lazy" decoding="async">
       <div class="loader-cyber"></div>
     </div>
     <div class="loader-text">Chargement du Portfolio...</div>
@@ -183,7 +183,7 @@
     <div class="navbar">
       <div class="navbar-left">
         <a href="index.html" class="navbar-logo">
-          <img src="img/22 mai 2025, 13_51_32.png" alt="Logo Romain Begot - Retour à l'accueil">
+          <img src="img/22 mai 2025, 13_51_32.png" alt="Logo Romain Begot - Retour à l'accueil" loading="lazy" decoding="async">
           </a>
         <div class="site-title">Portfolio Romain Begot</div>
       </div>
@@ -220,13 +220,13 @@
 <section class="mission-cards">
   <div class="card-grid">
     <div class="card">
-      <img src="img/22 mai 2025, 13_51_32.png" alt="Illustration passage HTTPS">
+      <img src="img/22 mai 2025, 13_51_32.png" alt="Illustration passage HTTPS" loading="lazy" decoding="async">
       <h3>Passage HTTPS Apache</h3>
       <p>Sécurisation de l'accès via un reverse proxy.</p>
       <a href="#mission-https-apache" class="btn-primary">Voir le projet</a>
     </div>
     <div class="card">
-      <img src="img/backup-error/cover.png" alt="Sauvegarde Veeam en erreur">
+      <img src="img/backup-error/cover.png" alt="Sauvegarde Veeam en erreur" loading="lazy" decoding="async">
       <h3>Sauvegarde Veeam – relance en échec</h3>
       <p>Diagnostic et relance d'une sauvegarde échouée.</p>
       <a href="missions-veeam-backup.html" class="btn-primary">Voir le projet</a>
