--- a/mon-cv.html
+++ b/mon-cv.html
@@ -21,7 +21,7 @@
   <!-- Loader initial -->
   <div id="page-loader">
     <div class="loader-logo">
-      <img src="img/22 mai 2025, 13_51_32.png" alt="Logo Romain Begot - Portfolio Professionnel" class="loader-img">
+      <img src="img/22 mai 2025, 13_51_32.png" alt="Logo Romain Begot - Portfolio Professionnel" class="loader-img" loading="lazy" decoding="async">
       <div class="loader-cyber"></div>
     </div>
     <div class="loader-text">Chargement du Portfolio...</div>
@@ -31,7 +31,7 @@
     <div class="navbar">
       <div class="navbar-left">
         <a href="index.html" class="navbar-logo">
-          <img src="img/22 mai 2025, 13_51_32.png" alt="Logo Romain Begot - Retour à l'accueil">
+          <img src="img/22 mai 2025, 13_51_32.png" alt="Logo Romain Begot - Retour à l'accueil" loading="lazy" decoding="async">
         </a>
         <div class="site-title">Portfolio Romain Begot</div>
       </div>
