feat(QA): content & UI fixes after manual review

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a href="stages.html" aria-haspopup="true" aria-expanded="false">Missions de Stage</a>
             <ul class="submenu-list">
               <li><a href="stages.html#mission-https-apache">Passage HTTPS Apache</a></li>
-              <li><a href="missions-veeam-backup.html">Sauvegarde Veeam – relance en échec</a></li>
+              <li><a href="missions-veeam-backup.html">Sauvegarde en erreur</a></li>
             </ul>
           </li>
         </ul>
@@ -121,10 +121,28 @@
           <span class="link-icon">🏢</span>
           <span class="link-text">Expériences professionnelles</span>
         </a>
-        <a href="veille-tech.html" class="quick-link">
+      <a href="veille-tech.html" class="quick-link">
           <span class="link-icon">📡</span>
           <span class="link-text">Veille technologique</span>
         </a>
+      </div>
+    </section>
+
+    <section class="stage-preview">
+      <h2>Missions de Stage</h2>
+      <div class="card-grid">
+        <div class="card">
+          <img src="img/22 mai 2025, 13_51_32.png" alt="Illustration passage HTTPS" loading="lazy" decoding="async">
+          <h3>Passage HTTPS Apache</h3>
+          <p>Sécurisation de l'accès via un reverse proxy.</p>
+          <a href="stages.html#mission-https-apache" class="btn btn-primary">Voir le projet</a>
+        </div>
+        <div class="card">
+          <img src="img/backup-error/cover.png" alt="Sauvegarde Veeam en erreur" loading="lazy" decoding="async">
+          <h3>Sauvegarde en erreur</h3>
+          <p>Diagnostic et relance d'une sauvegarde échouée.</p>
+          <a href="missions-veeam-backup.html" class="btn btn-primary">Voir le projet</a>
+        </div>
       </div>
     </section>
 
