--- a/missions-veeam-backup.html
+++ b/missions-veeam-backup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sauvegarde Veeam – relance en échec</title>
+  <title>Sauvegarde en erreur</title>
   <meta name="description" content="Diagnostic et relance d'une sauvegarde Veeam en erreur pour le client Bigmatinfo.">
   <meta name="author" content="Romain Begot">
   <link rel="stylesheet" href="css/style.css">
@@ -42,7 +42,7 @@
             <a href="stages.html" aria-haspopup="true" aria-expanded="false">Missions de Stage</a>
             <ul class="submenu-list">
               <li><a href="stages.html#mission-https-apache">Passage HTTPS Apache</a></li>
-              <li><a href="missions-veeam-backup.html" class="active">Sauvegarde Veeam – relance en échec</a></li>
+              <li><a href="missions-veeam-backup.html" class="active">Sauvegarde en erreur</a></li>
             </ul>
           </li>
         </ul>
@@ -120,3 +120,4 @@
   <script src="js/loader.js"></script>
 </body>
 </html>
+
