--- a/stages.html
+++ b/stages.html
@@ -204,7 +204,7 @@
             <a href="stages.html" class="active" aria-haspopup="true" aria-expanded="false">Missions de Stage</a>
             <ul class="submenu-list">
               <li><a href="stages.html#mission-https-apache">Passage HTTPS Apache</a></li>
-              <li><a href="missions-veeam-backup.html">Sauvegarde Veeam – relance en échec</a></li>
+              <li><a href="missions-veeam-backup.html">Sauvegarde en erreur</a></li>
               </ul>
           </li>
         </ul>
@@ -223,13 +223,13 @@
       <img src="img/22 mai 2025, 13_51_32.png" alt="Illustration passage HTTPS" loading="lazy" decoding="async">
       <h3>Passage HTTPS Apache</h3>
       <p>Sécurisation de l'accès via un reverse proxy.</p>
-      <a href="#mission-https-apache" class="btn-primary">Voir le projet</a>
+      <a href="#mission-https-apache" class="btn btn-primary">Voir le projet</a>
     </div>
     <div class="card">
       <img src="img/backup-error/cover.png" alt="Sauvegarde Veeam en erreur" loading="lazy" decoding="async">
-      <h3>Sauvegarde Veeam – relance en échec</h3>
+      <h3>Sauvegarde en erreur</h3>
       <p>Diagnostic et relance d'une sauvegarde échouée.</p>
-      <a href="missions-veeam-backup.html" class="btn-primary">Voir le projet</a>
+      <a href="missions-veeam-backup.html" class="btn btn-primary">Voir le projet</a>
     </div>
   </div>
 </section>
@@ -387,3 +387,4 @@
   <script src="js/loader.js"></script>
   </body>
 </html>
+
