--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
       <h2>Missions de Stage</h2>
       <div class="card-grid">
         <div class="card">
-          <img src="img/22 mai 2025, 13_51_32.png" alt="Illustration passage HTTPS" loading="lazy" decoding="async">
+          <img src="loading="lazy" decoding="async">
           <h3>Passage HTTPS Apache</h3>
           <p>Sécurisation de l'accès via un reverse proxy.</p>
           <a href="stages.html#mission-https-apache" class="btn btn-primary">Voir le projet</a>
         </div>
         <div class="card">
-          <img src="img/backup-error/cover.png" alt="Sauvegarde Veeam en erreur" loading="lazy" decoding="async">
+          <img src="loading="lazy" decoding="async">
           <h3>Sauvegarde en erreur</h3>
           <p>Diagnostic et relance d'une sauvegarde échouée.</p>
           <a href="missions-veeam-backup.html" class="btn btn-primary">Voir le projet</a>
